package use_case5.boundary;

public interface GenerateCategoryReportInputBoundary {
    void generateReport(GenerateCategoryReportRequestModel requestModel);
}